--- a/src/layouts/LoginFormContainer/LoginFormContainer.module.scss
+++ b/src/layouts/LoginFormContainer/LoginFormContainer.module.scss
@@ -1,7 +1,7 @@
 @import "../../styles/config";
 
 .form {
-  padding-top: 100px;
+  // padding-top: 100px;
   padding-bottom: 60px;
   max-width: 360px;
   position: relative;
