--- a/src/layouts/MainLayout/MainLayout.module.scss
+++ b/src/layouts/MainLayout/MainLayout.module.scss
@@ -8,6 +8,7 @@
   justify-content: space-between;
   height: 100%;
   overflow: hidden;
+  align-items: center;
 }
 
 .content {
@@ -43,9 +44,11 @@
     .content {
       padding: 0px 20px 20px 20px;
     }
-    header,
-    footer {
+    header {
       padding: 20px;
+    }
+    footer {
+      padding: 0 20px;
     }
   }
 }
